--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hangman</title>
   </head>
   <body>
-    <h1>Welcome to Hangman</h1>
+    <h1>Welcome to Fruit Bowl Hangman</h1>
     <div id="info">
       
     </div>
